# WinJobster.cpp

./: .gitignore  CMakeLists.txt
.github/workflows/: build-and-run-tests.yml  release.yml
include/: Defines.h  ErrorCode.h  PublicApi.h  Wrappers.h
src/: Job.cpp  Job.h  Journal.cpp  Journal.h  Process.cpp  Process.h  PublicApi.cpp  Utils.cpp  Utils.h  WinapiHelpers.cpp  WinapiHelpers.h  Wrappers.cpp
test/: CMakeLists.txt  ManualTest.cpp  PublicApiTests.cpp  Tests.cpp
test/helpers/: Constants.h  PublicApiHelpers.cpp  PublicApiHelpers.h
